; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_event.c_nouveau_event_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_event.c_nouveau_event_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_event = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nouveau_event_destroy(%struct.nouveau_event** %0) #0 {
  %2 = alloca %struct.nouveau_event**, align 8
  %3 = alloca %struct.nouveau_event*, align 8
  store %struct.nouveau_event** %0, %struct.nouveau_event*** %2, align 8
  %4 = load %struct.nouveau_event**, %struct.nouveau_event*** %2, align 8
  %5 = load %struct.nouveau_event*, %struct.nouveau_event** %4, align 8
  store %struct.nouveau_event* %5, %struct.nouveau_event** %3, align 8
  %6 = load %struct.nouveau_event*, %struct.nouveau_event** %3, align 8
  %7 = icmp ne %struct.nouveau_event* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.nouveau_event*, %struct.nouveau_event** %3, align 8
  %10 = call i32 @kfree(%struct.nouveau_event* %9)
  %11 = load %struct.nouveau_event**, %struct.nouveau_event*** %2, align 8
  store %struct.nouveau_event* null, %struct.nouveau_event** %11, align 8
  br label %12

12:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @kfree(%struct.nouveau_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
